removendo padding nav

--- a/login/login.css
+++ b/login/login.css
@@ -1,13 +1,10 @@
 *{
 
-    margin: 0%;
-    padding: auto;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    
-
-    
     background-color: #000000;
     font-family: Arial, sans-serif;
     background-image: url('https://www.actionacademia.com.br/background2.jpg');
