--- a/home/index.css
+++ b/home/index.css
@@ -62,7 +62,11 @@ body {
 }
 
 .produtoDesc:hover {
-    background-color: rgb(0, 0, 0, 0.93);
+    background-color: rgba(255, 0, 0, 0.93);
+}
+
+.produtoDesc span:hover{
+    color: blueviolet;
 }
 
 .textoProduto {
