--- a/perfil/profile.css
+++ b/perfil/profile.css
@@ -62,12 +62,13 @@ h2 {
 .cartaoUser {
     width: 540px;
     background-image: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0));
-    height: 500px;
+    height: 550px;
     border-radius: 17px;
     box-shadow: rgb(0, 0, 0) 3px 22px 70px 4px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .fotoPerfil{
@@ -79,12 +80,15 @@ h2 {
     transform: translateY(-50%);
 }
 
+
 .nomeProfile h1{
     text-align: center;
-    margin: 0 auto;
+    margin: 30px;
     margin-top: 15px;
     color: white;
     font-weight: bold;
+    display: flex;
+
 }
 
 .nomeProfile h1:hover{
@@ -92,24 +96,25 @@ h2 {
     transition: 0.2s;
 }
 
-.nomeProfile h2{
-    text-align: left;
-    margin: 0 auto;
-    margin-top: 15px;
-    color: white;
-    font-weight: 300;
-    font-size: 30px;
-    
-}
-
 .nomeProfile p {
     margin-top: 15px;
     text-align: center;
     font-size: 13px;
     font-weight: bold;
-    color: rgba(255, 0, 0, 0.562);;
+    color: rgba(255, 0, 0, 0.562);
 }
 
-.nomeProfile h3{
+.idColor{
     color: white;
+    font-weight: 300;
+    font-size: 18px;
+    font-family: Helvetica;
+}
+
+.fColor{
+    display: flex;
+    flex-direction: column;
+    color: rgba(255, 0, 0, 0.562);
+    font-weight: bold;
+    font-size: 25px;
 }
