--- a/perfil/profile.css
+++ b/perfil/profile.css
@@ -62,12 +62,13 @@ h2 {
 .cartaoUser {
     width: 540px;
     background-image: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0));
-    height: 500px;
+    height: 590px;
     border-radius: 17px;
     box-shadow: rgb(0, 0, 0) 3px 22px 70px 4px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .fotoPerfil{
@@ -79,12 +80,15 @@ h2 {
     transform: translateY(-50%);
 }
 
+
 .nomeProfile h1{
     text-align: center;
-    margin: 0 auto;
+    margin: 30px;
     margin-top: 15px;
     color: white;
     font-weight: bold;
+    display: flex;
+
 }
 
 .nomeProfile h1:hover{
@@ -100,6 +104,26 @@ h2 {
     color: rgba(255, 0, 0, 0.562);
 }
 
+.idColor{
+    color: white;
+    font-weight: 300;
+    font-size: 18px;
+    font-family: Helvetica;
+}
+
+.fColor{
+    display: flex;
+    flex-direction: column;
+    color: rgba(255, 0, 0, 0.562);
+    font-weight: bold;
+    font-size: 25px;
+}
+
 .nomeProfile h3{
     color: white;
+    font-weight: bold;
+    font-size: 11px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: end;
 }
